{{$NEXT}}

1.000001 2016-01-17

- BUGFIX: Fix installation bug (ooops)
- DOCUMENTATION: Fix example code typo (ooops)
- DOCUMENTATION: Reorder pod into sane order (ooops)
- INTERNAL: Switch "after" to "around" in places

1.000000 2016-01-17

- Inital Release